--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -74,7 +74,8 @@
 						"_2": "**Watchdog:**",
 						"_3": "**Anti-Phishing:**",
 						"_4": "**Verification:**",
-						"_5": "**Warnings:**"
+						"_5": "**Invite Tracker:**",
+						"_6": "**Broadcast Channel:**"
 					}
 				},
 				"language": {
